// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegisterScreen should match the snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "flex": 1,
      "justifyContent": "center",
      "padding": 20,
    }
  }
>
  <View>
    <Image
      resizeMode="contain"
      source={1}
      style={
        {
          "height": 220,
          "width": 220,
        }
      }
    />
  </View>
  <Text
    style={
      {
        "alignSelf": "flex-start",
        "fontSize": 24,
        "fontWeight": "bold",
        "marginBottom": 20,
        "textAlign": "left",
      }
    }
  >
    Create Account
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "borderColor": "#ccc",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 50,
        "marginVertical": 10,
        "paddingHorizontal": 10,
      }
    }
  >
    <Text />
    <TextInput
      onChangeText={[Function]}
      placeholder="Full Name"
      style={
        {
          "flex": 1,
          "fontSize": 16,
        }
      }
      testID="fullName"
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "borderColor": "#ccc",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 50,
        "marginVertical": 10,
        "paddingHorizontal": 10,
      }
    }
  >
    <Text />
    <TextInput
      onChangeText={[Function]}
      placeholder="Email address"
      style={
        {
          "flex": 1,
          "fontSize": 16,
        }
      }
      testID="email"
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "borderColor": "#ccc",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 50,
        "marginVertical": 10,
        "paddingHorizontal": 10,
      }
    }
  >
    <Text />
    <TextInput
      onChangeText={[Function]}
      placeholder="Password"
      secureTextEntry={true}
      style={
        {
          "flex": 1,
          "fontSize": 16,
        }
      }
      testID="password"
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "flexDirection": "row",
        "marginVertical": 10,
        "paddingLeft": 4,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "opacity": 1,
        }
      }
      testID="checkbox"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderColor": "#ccc",
              "borderWidth": 1,
              "height": 20,
              "justifyContent": "center",
              "marginRight": 8,
              "width": 20,
            },
            false,
          ]
        }
      />
    </View>
    <Text
      style={
        {
          "fontSize": 14,
          "marginLeft": 8,
        }
      }
    >
      I agree with 
      <Text
        style={
          {
            "color": "#E63946",
            "textDecorationLine": "underline",
          }
        }
      >
        Terms
      </Text>
       and 
      <Text
        style={
          {
            "color": "#E63946",
            "textDecorationLine": "underline",
          }
        }
      >
        Privacy
      </Text>
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#E63946",
        "borderRadius": 8,
        "display": "flex",
        "flexDirection": "row",
        "gap": 5,
        "justifyContent": "center",
        "marginVertical": 10,
        "minWidth": 380,
        "opacity": 1,
        "paddingVertical": 15,
      }
    }
    testID="signUp"
  >
    <Text
      style={
        [
          {
            "color": "#fff",
            "fontSize": 16,
            "fontWeight": "bold",
          },
          undefined,
        ]
      }
    >
      SIGN UP
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "#ccc",
        "borderRadius": 8,
        "borderWidth": 1,
        "color": "#000",
        "display": "flex",
        "flexDirection": "row",
        "gap": 5,
        "justifyContent": "center",
        "marginVertical": 10,
        "minWidth": 380,
        "opacity": 1,
        "paddingVertical": 15,
      }
    }
    testID="googleSignUp"
  >
    <Text>
      <Text />
    </Text>
    <Text
      style={
        [
          {
            "color": "#fff",
            "fontSize": 16,
            "fontWeight": "bold",
          },
          {
            "color": "#282828",
            "fontWeight": "regular",
          },
        ]
      }
    >
      Sign Up with Google
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 14,
          "marginTop": 20,
        }
      }
    >
      Already have an account? 
      <Text
        style={
          {
            "color": "#E63946",
            "textDecorationLine": "underline",
          }
        }
      >
        Log In
      </Text>
    </Text>
  </View>
</View>
`;

exports[`RegisterScreen should update form fields correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "flex": 1,
      "justifyContent": "center",
      "padding": 20,
    }
  }
>
  <View>
    <Image
      resizeMode="contain"
      source={1}
      style={
        {
          "height": 220,
          "width": 220,
        }
      }
    />
  </View>
  <Text
    style={
      {
        "alignSelf": "flex-start",
        "fontSize": 24,
        "fontWeight": "bold",
        "marginBottom": 20,
        "textAlign": "left",
      }
    }
  >
    Create Account
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "borderColor": "#ccc",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 50,
        "marginVertical": 10,
        "paddingHorizontal": 10,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#a9a9a9",
            "fontSize": 24,
          },
          {
            "marginRight": 10,
          },
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <TextInput
      onChangeText={[Function]}
      placeholder="Full Name"
      style={
        {
          "flex": 1,
          "fontSize": 16,
        }
      }
      testID="fullName"
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "borderColor": "#ccc",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 50,
        "marginVertical": 10,
        "paddingHorizontal": 10,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#a9a9a9",
            "fontSize": 24,
          },
          {
            "marginRight": 10,
          },
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <TextInput
      onChangeText={[Function]}
      placeholder="Email address"
      style={
        {
          "flex": 1,
          "fontSize": 16,
        }
      }
      testID="email"
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "borderColor": "#ccc",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 50,
        "marginVertical": 10,
        "paddingHorizontal": 10,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#a9a9a9",
            "fontSize": 24,
          },
          {
            "marginRight": 10,
          },
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <TextInput
      onChangeText={[Function]}
      placeholder="Password"
      secureTextEntry={true}
      style={
        {
          "flex": 1,
          "fontSize": 16,
        }
      }
      testID="password"
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "flexDirection": "row",
        "marginVertical": 10,
        "paddingLeft": 4,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "opacity": 1,
        }
      }
      testID="checkbox"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderColor": "#ccc",
              "borderWidth": 1,
              "height": 20,
              "justifyContent": "center",
              "marginRight": 8,
              "width": 20,
            },
            false,
          ]
        }
      />
    </View>
    <Text
      style={
        {
          "fontSize": 14,
          "marginLeft": 8,
        }
      }
    >
      I agree with 
      <Text
        style={
          {
            "color": "#E63946",
            "textDecorationLine": "underline",
          }
        }
      >
        Terms
      </Text>
       and 
      <Text
        style={
          {
            "color": "#E63946",
            "textDecorationLine": "underline",
          }
        }
      >
        Privacy
      </Text>
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#E63946",
        "borderRadius": 8,
        "display": "flex",
        "flexDirection": "row",
        "gap": 5,
        "justifyContent": "center",
        "marginVertical": 10,
        "minWidth": 380,
        "opacity": 1,
        "paddingVertical": 15,
      }
    }
    testID="signUp"
  >
    <Text
      style={
        [
          {
            "color": "#fff",
            "fontSize": 16,
            "fontWeight": "bold",
          },
          undefined,
        ]
      }
    >
      SIGN UP
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "#ccc",
        "borderRadius": 8,
        "borderWidth": 1,
        "color": "#000",
        "display": "flex",
        "flexDirection": "row",
        "gap": 5,
        "justifyContent": "center",
        "marginVertical": 10,
        "minWidth": 380,
        "opacity": 1,
        "paddingVertical": 15,
      }
    }
    testID="googleSignUp"
  >
    <Text>
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 20,
            },
            undefined,
            {
              "fontFamily": "ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </Text>
    <Text
      style={
        [
          {
            "color": "#fff",
            "fontSize": 16,
            "fontWeight": "bold",
          },
          {
            "color": "#282828",
            "fontWeight": "regular",
          },
        ]
      }
    >
      Sign Up with Google
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 14,
          "marginTop": 20,
        }
      }
    >
      Already have an account? 
      <Text
        style={
          {
            "color": "#E63946",
            "textDecorationLine": "underline",
          }
        }
      >
        Log In
      </Text>
    </Text>
  </View>
</View>
`;
